@@ -79,10 +79,7 @@
                 "content-type": "application/json"
             },
             "headers_sent": true,
-            "status": {
-                "code": 200,
-                "message": "OK"
-            }
+            "status_code": 200
         },
         "system": {
             "architecture": "x64",
